--- a/Клиент/NetFileManagerClient/App.xaml
+++ b/Клиент/NetFileManagerClient/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="NetFileManagerClient.App"
+﻿<Application x:Class="NetFileManagerClient.Application"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Auth.xaml">
     <Application.Resources>
          
     </Application.Resources>
