--- a/Клиент/NetFileManagerClient/Views/FilesListView.xaml
+++ b/Клиент/NetFileManagerClient/Views/FilesListView.xaml
@@ -1,8 +1,9 @@
-﻿<UserControl x:Class="NetFileManagerClient.Views.FilesListView"
+﻿<UserControl
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:NetFileManagerClient="clr-namespace:NetFileManagerClient" x:Class="NetFileManagerClient.Views.FilesListView" 
              mc:Ignorable="d" 
              d:DesignHeight="400" d:DesignWidth="600">
     <UserControl.Resources>
@@ -29,6 +30,10 @@
                      Margin="2" Padding="3" 
                      Width="150px" 
                      Text="{Binding ServerIp, Mode=TwoWay, UpdateSourceTrigger=LostFocus}" />
+            <Label Content="Вы вошли как:" Height="28" VerticalAlignment="Top"/>
+            <Label x:Name="LabelUser"  Height="28" VerticalAlignment="Top"
+                   Content="{Binding Auth.User }" Loaded="LabelUser_Loaded"
+                   />
         </DockPanel>
         <DockPanel Grid.Row="1" LastChildFill="False">
             <Button DockPanel.Dock="Left" 
@@ -72,6 +77,6 @@
         <TextBlock Grid.Row="3" 
                    Margin="2" Padding="3" 
                    HorizontalAlignment="Right" 
-                   Text="{Binding ElementName=dGrid, Path=Items.Count, Mode=OneWay, StringFormat='Файлов: {0}'}" />
+                   Text="{Binding Items.Count, ElementName=dGrid, Mode=OneWay, StringFormat=Файлов: \{0\}}" />
     </Grid>
 </UserControl>
